<resources>
    <string name="app_name">StackUnderFlow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">StackUnderFlow</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Profile</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_scripts">My Scripts</string>
    <string name="Login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="createAccount">Create account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="todo">TODO</string>
    <string name="register">Register</string>
    <string name="menu_feed">Feed</string>
    <string name="profileEmail">Email :</string>
    <string name="ProfileUsernameText">Username</string>
    <string name="ProfileUsername">Username :</string>
    <string name="ProfileEmailText">Email@gmail.com</string>
    <string name="emailTopProfile">Email@gmail.com</string>
    <string name="UsernameTopProfile">Profile Name</string>
    <string name="comment">Comment</string>
    <string name="CreateComment">Comment</string>
    <string name="Notifications">Notifications</string>
    <string name="Message">Message</string>
    <string name="FriendRequestMessage">Friend Request Message</string>
    <string name="userInfo">UserInfo</string>
    <string name="description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MyGroup">My group</string>
    <string name="Creategroup">Create group</string>
    <string name="DescriptionOfTheGroup">Description Of The Group</string>
    <string name="GroupeName">Group Name</string>
</resources>