<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_notifications"
            android:iconTint="@color/black"
            android:icon="@drawable/notification"
            android:title="@string/Notifications" />

        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/baseline_dynamic_feed_24"
            android:title="@string/menu_feed" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/baseline_person_search_24"
            android:iconTint="@color/black"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_scripts"
            android:iconTint="@color/black"
            android:icon="@drawable/file_script"
            android:title="@string/menu_scripts" />

        <item
            android:id="@+id/nav_group"
            android:iconTint="@color/black"
            android:icon="@drawable/baseline_group_24"
            android:title="@string/MyGroup" />

    </group>
</menu>