<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="5dp"
    android:layout_margin="10dp"
    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/groupContent"
            android:text="@string/Creategroup"
            android:textStyle="bold"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            android:padding="10dp"
            android:elevation="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/newGroupName"
            android:autofillHints="@string/CreateComment"
            android:hint="@string/GroupeName"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/rounded_text"
            android:padding="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/newDescriptionGroup"
            android:autofillHints="@string/DescriptionOfTheGroup"
            android:hint="@string/DescriptionOfTheGroup"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/rounded_text"
            android:padding="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>