<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/baseline_account_circle_24" />

        <EditText
            android:id="@+id/mail_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/login_shape"
            android:hint="@string/email"
            android:inputType="text"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_shape"
            android:hint="@string/username"
            android:inputType="textPassword"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_shape"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/login_shape"
            android:padding="18sp"
            android:text="@string/createAccount"
            android:textColor="@color/black" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>