<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="3dp"
    tools:context="com.example.stackunderflow.ui.home.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_back"
                        android:layout_width="match_parent"
                        android:layout_height="360dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ImageView
                        android:id="@+id/imageViewProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="141dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginEnd="142dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/person_icon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewProfileName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/UsernameTopProfile"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/imageViewProfile"
                        app:layout_constraintStart_toStartOf="@+id/imageViewProfile"
                        app:layout_constraintTop_toBottomOf="@+id/imageViewProfile" />

                    <TextView
                        android:id="@+id/textViewEmailTop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/emailTopProfile"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="@+id/textViewProfileName"
                        app:layout_constraintStart_toStartOf="@+id/textViewProfileName"
                        app:layout_constraintTop_toBottomOf="@+id/textViewProfileName" />

                    <LinearLayout
                        android:layout_width="368dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="60dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/grey_background"
                        android:elevation="3dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewEmailTop"
                        app:layout_constraintVertical_bias="1.0">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/login_shape"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:text="@string/profileEmail"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textViewEmailChange"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:text="@string/ProfileEmailText"
                                android:textAlignment="viewEnd"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <View
                            android:id="@+id/view4"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_margin="10dp"
                            android:background="#D9D9D9" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@drawable/login_shape"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:text="@string/ProfileUsername"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textViewUsernameChange"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:text="@string/ProfileUsernameText"
                                android:textAlignment="viewEnd"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <View
                            android:id="@+id/view3"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_margin="10dp"
                            android:background="#D9D9D9" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@drawable/login_shape">


                            <TextView
                                android:id="@+id/descriptionTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:text="@string/description"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                        </LinearLayout>



                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>